--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -686,6 +686,7 @@ them however you see fit.
   .m-all {
     float: left;
     padding-right: 0.75em;
+    padding-right: 0;
     width: 100%; }
 
   .m-1of2 {
@@ -1693,16 +1694,13 @@ SECTION CONTENT GENERAL STYLES
 .section-content-wrapper {
   width: 100%;
   margin-top: 10em;
+  padding-bottom: 3em;
   background-color: #333333 200px;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(51, 51, 51, 0.7) 0%), to(#333333 200px));
   background-image: -webkit-linear-gradient(top, rgba(51, 51, 51, 0.7) 0%, #333333 200px);
   background-image: -moz-linear-gradient(top, rgba(51, 51, 51, 0.7) 0%, #333333 200px);
   background-image: -o-linear-gradient(top, rgba(51, 51, 51, 0.7) 0%, #333333 200px);
-  background-image: linear-gradient(to bottom, rgba(51, 51, 51, 0.7) 0%, #333333 200px);
-  padding-bottom: 3em; }
-
-.section-content-text {
-  padding-right: 3em; }
+  background-image: linear-gradient(to bottom, rgba(51, 51, 51, 0.7) 0%, #333333 200px); }
 
 /***********************
 SIDE GALLERIES & ASIDES
@@ -1990,6 +1988,9 @@ you can add resource intensive styles.
     padding-top: 15em;
     background-size: cover;
     background-attachment: fixed; }
+
+  .section-content-text {
+    padding-right: 3em; }
 
   #section-pieces .section-content-text {
     padding-left: 2em;
