--- a/styles/scss/breakpoints/_768up.scss
+++ b/styles/scss/breakpoints/_768up.scss
@@ -202,6 +202,10 @@ CONTENT SECTIONS
 	background-attachment: fixed;
 }
 
+.section-content-text {
+	padding-right: 3em;
+}
+
 #section-pieces {
 	.section-content-text {
 		padding-left: 2em;
@@ -209,7 +213,6 @@ CONTENT SECTIONS
 		margin-bottom: 0;
 	}
 }
-
 
 /***********************
 SIDE GALLERIES & ASIDES
